...
            modifier = Modifier.fillMaxWidth()
        ) {
            OutlinedTextField(
                value = selectedExercise?.computedExerciseName ?: "Select Exercise",
                onValueChange = {},
                readOnly = true,
                label = { Text("Exercise") },
                trailingIcon = { ExposedDropdownMenuDefaults.TrailingIcon(expanded = expanded) },
                colors = ExposedDropdownMenuDefaults.outlinedTextFieldColors(),
                modifier = Modifier
                    .menuAnchor(SecondaryEditable)
                    .fillMaxWidth()
            )
...
