...
                    .fillMaxWidth()
                    .clickable(onClick = onNavigateToSelectExercise),
                shape = MaterialTheme.shapes.medium,
                border = BorderStroke(1.dp, MaterialTheme.colorScheme.outline)
            ) {
                Text(
                    text = exerciseDefinition?.computedExerciseName ?: "Select Exercise...",
                    style = MaterialTheme.typography.titleMedium,
                    modifier = Modifier
                        .padding(16.dp)
                        .fillMaxWidth(),
                    textAlign = TextAlign.Center
                )
...
                verticalAlignment = Alignment.CenterVertically
            ) {
                Row(
                    verticalAlignment = Alignment.CenterVertically
                ) {
                    Text(
                        "KG",
                        fontWeight = if (workoutExercise.unit == WeightUnit.KG) FontWeight.Bold else FontWeight.Normal
                    )
                    Switch(
                        checked = workoutExercise.unit == WeightUnit.LB,
                        onCheckedChange = { isLbs ->
                            onExerciseUnitChange(if (isLbs) WeightUnit.LB else WeightUnit.KG)
...
